--- a/task/index.html
+++ b/task/index.html
@@ -8,8 +8,8 @@
     <script src="script.js" defer></script>
 </head>
 <body>
-    <div class="container">
+    <section class="container">
         <div id="countDown">10</div>
-    </div>
+    </section>
 </body>
 </html>
